@@ -15,6 +15,4 @@ libgnome-2.0.pc
 test-libgnome
 libgnome.defs
 libgnometypebuiltins.h
-libgnometypebuiltins_evals.c
-libgnometypebuiltins_ids.c
-libgnometypebuiltins_vars.c
+libgnometypebuiltins.c
