@@ -34,6 +34,4 @@
 #define PATH_SEP '/'
 #define PATH_SEP_STR "/"
 
-void libgnome_type_init (void);
-
 #endif /* LIBGNOMEP_H */
